# pixelart-gen

./: .gitignore  .gitmodules  Cargo.toml  Readme.md  dmc_colors.json
src/: color.rs  image.rs  main.rs
